--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,15 +13,15 @@
 </head>
 <body>
     <main class="container my-5">
-        <h1 class="text-center">Login</h1>
+        <h1 class="text-center">Giriş Yap</h1>
 
         <form action="/login" method="POST" class="validated-form" novalidate>
             <div class="mb-3">
-                <label for="usernameTx" class="form-label">Username</label>
+                <label for="usernameTx" class="form-label">Kullanıcı adı</label>
                 <input type="text" name="username" class="form-control" id="usernameTx" required>
             </div>
             <div class="mb-3">
-                <label for="passwordTx" class="form-label">Password</label>
+                <label for="passwordTx" class="form-label">Parola</label>
                 <input type="password" name="password" class="form-control" id="passwordTx"
                        required>
             </div>
