--- a/src/main/resources/templates/admin_panel.html
+++ b/src/main/resources/templates/admin_panel.html
@@ -29,7 +29,7 @@
             <h3>Görevlerim</h3>
             <div class="p-2 my-3 bg-white border" th:each="note: ${userNotes}">
                 <p class="mb-0" th:text="${note.body}"></p>
-                <p class="mb-0"><small th:text="${note.owner}"></small>, <i th:text="${note.dateCreated}"></i></p>
+                <p class="mb-0"><small th:text="${note.owner.username}"></small>, <i th:text="${note.dateCreated}"></i></p>
             </div></div>
         </div>
     </div>
@@ -40,7 +40,7 @@
             <h3>Bütün Görevler</h3>
             <div class="p-2 my-3 bg-white border" th:each="note: ${allNotes}">
                 <p class="mb-0" th:text="${note.body}"></p>
-                <p class="mb-0"><small th:text="${note.owner}"></small>, <i th:text="${note.dateCreated}"></i></p>
+                <p class="mb-0"><small th:text="${note.owner.username}"></small>, <i th:text="${note.dateCreated}"></i></p>
             </div></div>
         </div>
     </div>
