--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
     <main class="container my-5">
         <h1 class="text-center">Giriş Yap</h1>
 
-        <form action="/login" method="POST" class="validated-form" novalidate>
+        <form action="/login" method="POST">
             <div class="mb-3">
                 <label for="usernameTx" class="form-label">Kullanıcı adı</label>
                 <input type="text" name="username" class="form-control" id="usernameTx" required>
