--- a/src/main/resources/templates/admin_panel.html
+++ b/src/main/resources/templates/admin_panel.html
@@ -11,40 +11,68 @@
     <title th:text="${Title}"></title>
 </head>
 <body>
-<main class="container my-5">
-    <h1 class="text-center">Yönetici Paneli</h1>
-    <p><b>Current User:</b> <span th:text="${username}">USERNAME</span></p>
+    <main class="container my-5">
+        <h1 class="text-center">Yönetici Paneli</h1>
+        <p><b>Current User:</b> <span th:text="${activeUser}"></span></p>
 
-    <div class="row mb-3">
-        <div class="col-6">
-            <div class="p-3 bg-light border">
-            <h3>Kullanıcılar</h3>
-            <div class="p-2 my-3 bg-white border" th:each="user: ${users}">
-                <p class="mb-0" th:text="${user.username}"></p>
-            </div></div>
-        </div>
-        <div class="col-6">
-            <div class="p-3 bg-light border">
-            <h3>Görevlerim</h3>
-            <div class="p-2 my-3 bg-white border" th:each="note: ${userNotes}">
-                <p class="mb-0" th:text="${note.body}"></p>
-                <p class="mb-0"><small th:text="${note.owner.username}"></small>, <i th:text="${note.dateCreated}"></i></p>
-            </div></div>
-        </div>
-    </div>
+        <div class="row mb-3">
+            <div class="col-6">
+                <div class="p-3 bg-light border">
+                    <h3>Kullanıcılar</h3>
+                    <div id="usersPanel">
+                    </div>
 
-    <div class="row">
-        <div class="col-6 offset-3">
-            <div class="p-3 bg-light border">
-            <h3>Bütün Görevler</h3>
-            <div class="p-2 my-3 bg-white border" th:each="note: ${allNotes}">
-                <p class="mb-0" th:text="${note.body}"></p>
-                <p class="mb-0"><small th:text="${note.owner.username}"></small>, <i th:text="${note.dateCreated}"></i></p>
-            </div></div>
-        </div>
-    </div>
-</main>
+                    <div id="userCreatePanel" class="p-3 bg-light border">
+                        <h5>Yeni Kullanıcı Ekle</h3>
+                        <form id="userCreateForm">
+                            <div class="mb-3">
+                                <label for="newUserUsernameTx" class="form-label">Kullanıcı adı</label>
+                                <input class="form-control" id="newUserUsernameTx" name="username">
+                            </div>
+                            <div class="mb-3">
+                                <label for="newUserPasswordTx" class="form-label">Parola</label>
+                                <input type="password" class="form-control" id="newUserPasswordTx" name="password">
+                            </div>
 
-<script src="/js/bootstrap.bundle.min.js"></script>
+                            <div class="mb-3">
+                                <input type="checkbox" id="newUserAdminCb" name="isAdmin" class="form-check-input">
+                                <label for="newUserAdminCb" class="form-check-label">Yönetici</label>
+                            </div>
+                            <button class="btn btn-primary" id="createUserBt">Ekle</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="p-3 bg-light border">
+                    <h3>Notlarım</h3>
+                    <div id="notesPanel">
+                        <div class="p-2 my-3 bg-white border">
+                            <p class="mb-0">Everything</p>
+                            <p class="mb-0"><small>admin</small>, <i>YYYY-MM-DD</i></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6 offset-3">
+                <div class="p-3 bg-light border">
+                    <h3>Bütün Notlar</h3>
+                    <div id="allNotesPanel">
+                        <div class="p-2 my-3 bg-white border">
+                            <p class="mb-0">TEXT</p>
+                            <p class="mb-0"><small>username</small>, <i>DATE</i></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script src="/js/api-wrapper.js"></script>
+    <script src="/js/admin-panel.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
