--- a/src/main/resources/templates/user_panel.html
+++ b/src/main/resources/templates/user_panel.html
@@ -15,6 +15,9 @@
         <h1 class="text-center">Notlarım</h1>
 
         <p><b>Aktif kullanıcı:</b> <span th:text="${activeUser}"></span></p>
+        <div class="my-3">
+            <a href="/logout" class="btn btn-link">Çıkış yap</a>
+        </div>
 
         <div class="mb-3" th:if="${isUserAdmin} == true">
             <a href="/admin/panel" class="btn btn-link">Yönetici paneline geç</a>
@@ -40,10 +43,6 @@
 
             <button type="submit" class="btn btn-primary px-3 d-block ms-auto" id="sendBt">Ekle</button>
         </form>
-
-        <div class="my-5">
-            <a href="/logout">Çıkış Yap</a>
-        </div>
     </main>
 
     <script>
